APIs/googleapis.com/tpu/v1/java-client/README.md
# openapi-java-client

Cloud TPU API
- API version: v1
  - Build date: 2024-10-12T11:50:08.793928-04:00[America/New_York]
  - Generator version: 7.9.0

TPU API provides customers with access to Google TPU technology.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v1</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v1"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v1.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.ProjectsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://tpu.googleapis.com");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    ProjectsApi apiInstance = new ProjectsApi(defaultClient);
    String parent = "parent_example"; // String | Required. The parent resource name.
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    String filter = "filter_example"; // String | List filter.
    String orderBy = "orderBy_example"; // String | Sort results.
    Integer pageSize = 56; // Integer | The maximum number of items to return.
    String pageToken = "pageToken_example"; // String | The next_page_token value returned from a previous List request, if any.
    try {
      ListAcceleratorTypesResponse result = apiInstance.tpuProjectsLocationsAcceleratorTypesList(parent, $xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType, filter, orderBy, pageSize, pageToken);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling ProjectsApi#tpuProjectsLocationsAcceleratorTypesList");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://tpu.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ProjectsApi* | [**tpuProjectsLocationsAcceleratorTypesList**](docs/ProjectsApi.md#tpuProjectsLocationsAcceleratorTypesList) | **GET** /v1/{parent}/acceleratorTypes | 
*ProjectsApi* | [**tpuProjectsLocationsList**](docs/ProjectsApi.md#tpuProjectsLocationsList) | **GET** /v1/{name}/locations | 
*ProjectsApi* | [**tpuProjectsLocationsNodesCreate**](docs/ProjectsApi.md#tpuProjectsLocationsNodesCreate) | **POST** /v1/{parent}/nodes | 
*ProjectsApi* | [**tpuProjectsLocationsNodesList**](docs/ProjectsApi.md#tpuProjectsLocationsNodesList) | **GET** /v1/{parent}/nodes | 
*ProjectsApi* | [**tpuProjectsLocationsNodesReimage**](docs/ProjectsApi.md#tpuProjectsLocationsNodesReimage) | **POST** /v1/{name}:reimage | 
*ProjectsApi* | [**tpuProjectsLocationsNodesStart**](docs/ProjectsApi.md#tpuProjectsLocationsNodesStart) | **POST** /v1/{name}:start | 
*ProjectsApi* | [**tpuProjectsLocationsNodesStop**](docs/ProjectsApi.md#tpuProjectsLocationsNodesStop) | **POST** /v1/{name}:stop | 
*ProjectsApi* | [**tpuProjectsLocationsOperationsCancel**](docs/ProjectsApi.md#tpuProjectsLocationsOperationsCancel) | **POST** /v1/{name}:cancel | 
*ProjectsApi* | [**tpuProjectsLocationsOperationsDelete**](docs/ProjectsApi.md#tpuProjectsLocationsOperationsDelete) | **DELETE** /v1/{name} | 
*ProjectsApi* | [**tpuProjectsLocationsOperationsList**](docs/ProjectsApi.md#tpuProjectsLocationsOperationsList) | **GET** /v1/{name}/operations | 
*ProjectsApi* | [**tpuProjectsLocationsTensorflowVersionsGet**](docs/ProjectsApi.md#tpuProjectsLocationsTensorflowVersionsGet) | **GET** /v1/{name} | 
*ProjectsApi* | [**tpuProjectsLocationsTensorflowVersionsList**](docs/ProjectsApi.md#tpuProjectsLocationsTensorflowVersionsList) | **GET** /v1/{parent}/tensorflowVersions | 


## Documentation for Models

 - [AcceleratorType](docs/AcceleratorType.md)
 - [ListAcceleratorTypesResponse](docs/ListAcceleratorTypesResponse.md)
 - [ListLocationsResponse](docs/ListLocationsResponse.md)
 - [ListNodesResponse](docs/ListNodesResponse.md)
 - [ListOperationsResponse](docs/ListOperationsResponse.md)
 - [ListTensorFlowVersionsResponse](docs/ListTensorFlowVersionsResponse.md)
 - [Location](docs/Location.md)
 - [NetworkEndpoint](docs/NetworkEndpoint.md)
 - [Node](docs/Node.md)
 - [Operation](docs/Operation.md)
 - [OperationMetadata](docs/OperationMetadata.md)
 - [ReimageNodeRequest](docs/ReimageNodeRequest.md)
 - [SchedulingConfig](docs/SchedulingConfig.md)
 - [Status](docs/Status.md)
 - [Symptom](docs/Symptom.md)
 - [TensorFlowVersion](docs/TensorFlowVersion.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



